Mudei tanta coisa q eu to ficando louco já

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=dblite.db"
-  }
+  },
+  "JWT": "T9<@m<};9?4ppPt-sm!Siz g2c':FJB8]g=}{#;y4,#1#_}4|l[8(1$*+"
 }
